fix: padding top not visible in main nav

--- a/src/styles/components/header.css
+++ b/src/styles/components/header.css
@@ -15,11 +15,7 @@
   @apply text-center font-[500px] w-[100px] rounded-[4px] hover:bg-electric-pink capitalize transition-all
 }
 .main-nav, .user-cart {
-  padding: 0 0 !important;
-}
-.main-nav {
-  padding: 13px 0;
-
+  padding: 13px 0 !important;
 }
 /* Hamburger nav */
 .burger-nav {
@@ -29,11 +25,5 @@
 .user-nav {
   @apply text-right font-[500px] w-[100px] capitalize bg-transparent rounded-[4px] hover:bg-electric-pink hover:pr-[12px] transition-all
 }
-
-
-
-
-
-
 
 
